# ndk-cmake-sample

./: CMakeLists.txt  README.md  build-android.bat  func.cpp  func.h  main.cpp
